Fix compile error with the usage of `List.of`